--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <script type="text/javascript" src="out/src/EndState.js"></script>
     <script type="text/javascript" src="out/src/PauseState.js"></script>
     <script type="text/javascript" src="out/src/GameState.js"></script>
-    <script type="text/javascript" src="out/src/Particle.js"></script>
+    <script type="text/javascript" src="out/src/EngineSmoke.js"></script>
+    <script type="text/javascript" src="out/src/AsteroidExplosion.js"></script>
     <script type="text/javascript" src="out/src/Particles.js"></script>
     <script type="text/javascript" src="out/src/Texture.js"></script>
     <script type="text/javascript" src="out/src/Model.js"></script>
@@ -80,28 +81,7 @@
     var texture;
 
 
-    function handleLoadedTexture(texture) {
-        gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
-        gl.bindTexture(gl.TEXTURE_2D, texture);
-        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
 
-        gl.bindTexture(gl.TEXTURE_2D, null);
-    }
-
-
-    function initTexture() {
-        texture = gl.createTexture();
-        texture.image = new Image();
-        texture.image.onload = function() {
-            handleLoadedTexture(texture)
-        }
-
-        texture.image.src = "resources/images/smoke.gif";
-    }
 
 
 
